<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

	<TextView
	    android:id="@+id/line1"
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/line1"
        android:textSize="16sp" />
	<TextView
	    android:id="@+id/line2"
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/line1"
        android:text="@string/line2"
        android:textSize="16sp" />
	<TextView
	    android:id="@+id/line3"
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/line2"
        android:text="@string/line3"
        android:textSize="16sp" />
	<TextView
	    android:id="@+id/line4"
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/line3"
        android:text="@string/line4"
        android:textSize="16sp" />
	<TextView
	    android:id="@+id/line5"
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/line4"
        android:text="@string/line5"
        android:textSize="16sp" />
	<TextView
	    android:id="@+id/line6"
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/line5"
        android:text="@string/line6"
        android:textSize="16sp" />
	<TextView
	    android:id="@+id/line7"
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/line6"
        android:text="@string/line7"
        android:textSize="16sp" />
	<TextView
	    android:id="@+id/line8"
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/line7"
        android:text="@string/line8"
        android:textSize="16sp" />
	<TextView
	    android:id="@+id/line9"
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/line8"
        android:text="@string/line9"
        android:textSize="16sp" />
	<TextView
	    android:id="@+id/line10"
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/line9"
        android:text="@string/line10"
        android:textSize="16sp" />
	<TextView
	    android:id="@+id/line11"
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/line10"
        android:text="@string/line11"
        android:textSize="16sp" />
	<TextView
	    android:id="@+id/line12"
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/line11"
        android:text="@string/line12"
        android:textSize="16sp" />
	<TextView
	    android:id="@+id/line13"
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/line12"
        android:text="@string/line13"
        android:textSize="16sp" />
	<TextView
	    android:id="@+id/line14"
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/line13"
        android:text="@string/line14"
        android:textSize="16sp" />
	<TextView
	    android:id="@+id/line15"
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/line14"
        android:text="@string/line15"
        android:textSize="16sp" />
	<TextView
	    android:id="@+id/line16"
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/line15"
        android:text="@string/line16"
        android:textSize="16sp" />
	<TextView
	    android:id="@+id/line17"
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/line16"
        android:text="@string/line17"
        android:textSize="16sp" />
	<TextView
	    android:id="@+id/line18"
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/line17"
        android:text="@string/line18"
        android:textSize="16sp" />
	<TextView
	    android:id="@+id/line19"
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/line18"
        android:text="@string/line19"
        android:textSize="16sp" />
	<TextView
	    android:id="@+id/line20"
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/line19"
        android:text="@string/line20"
        android:textSize="16sp" />
	<TextView
	    android:id="@+id/line21"
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/line20"
        android:text="@string/line21"
        android:textSize="16sp" />

	
	<EditText
	    android:id="@+id/lyric1"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignBottom="@id/line1"
	    android:layout_alignParentRight="true"
	    android:layout_toRightOf="@id/line1"
	    android:ems="6"
	    android:scrollHorizontally="true"
	    android:hint="Answer" />
	
	<EditText
	    android:id="@+id/lyric2"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentRight="true"
	    android:layout_below="@id/lyric1"
	    android:layout_toRightOf="@id/line2"
	    android:layout_alignBottom="@id/line2"
	    android:ems="6"
	    android:scrollHorizontally="true"
	    android:hint="A" />
	
	<EditText
	    android:id="@+id/lyric3"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentRight="true"
	   	android:layout_below="@id/lyric2"
	   	android:layout_toRightOf="@id/line3"
	   	android:layout_alignBottom="@id/line3"
	    android:ems="6"
	    android:scrollHorizontally="true"
	    android:hint="A" />

	<EditText
	    android:id="@+id/lyric4"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentRight="true"
	    android:layout_below="@id/lyric3"
	    android:layout_toRightOf="@id/line4"
	    android:layout_alignBottom="@id/line4"
	    android:ems="6"
	    android:scrollHorizontally="true"
	    android:hint="A" />
	
	<EditText
	    android:id="@+id/lyric5"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentRight="true"
	    android:layout_below="@id/lyric4"
	    android:layout_toRightOf="@id/line5"
	    android:layout_alignBottom="@id/line5"
	    android:ems="6"
	    android:scrollHorizontally="true"
	    android:hint="A" />
	
	<EditText
	    android:id="@+id/lyric6"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentRight="true"
	    android:layout_below="@id/lyric5"
	    android:layout_toRightOf="@id/line6"
	    android:layout_alignBottom="@id/line6"
	    android:ems="6"
	    android:scrollHorizontally="true"
	    android:hint="A" />

	<EditText
	    android:id="@+id/lyric7"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentRight="true"
	    android:layout_below="@id/lyric6"
	    android:layout_toRightOf="@id/line7"
	    android:layout_alignBottom="@id/line7"
	    android:ems="6"
	    android:scrollHorizontally="true"
	    android:hint="A" />
	
	<EditText
	    android:id="@+id/lyric8"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentRight="true"
	    android:layout_below="@id/lyric7"
	    android:layout_toRightOf="@id/line8"
	    android:layout_alignBottom="@id/line8"
	    android:ems="6"
	    android:scrollHorizontally="true"
	    android:hint="A" />
	
	<EditText
	    android:id="@+id/lyric9"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/lyric8"
	    android:layout_toRightOf="@id/line9"
	    android:layout_alignBottom="@id/line9"
	    android:ems="6"
	    android:scrollHorizontally="true"
	    android:hint="A" />
	
	<EditText
	    android:id="@+id/lyric10"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentRight="true"
	    android:layout_below="@id/lyric9"
	    android:layout_toRightOf="@id/line10"
	    android:layout_alignBottom="@id/line10"
	    android:ems="6"
	    android:scrollHorizontally="true"
	    android:hint="A" />
	
	<EditText
	    android:id="@+id/lyric11"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentRight="true"
	    android:layout_below="@id/lyric10"
	    android:layout_toRightOf="@id/line11"
	    android:layout_alignBottom="@id/line11"
	    android:ems="6"
	    android:scrollHorizontally="true"
	    android:hint="A" />
	
	<EditText
	    android:id="@+id/lyric12"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentRight="true"
	    android:layout_below="@id/lyric11"
	    android:layout_toRightOf="@id/line12"
	    android:layout_alignBottom="@id/line12"
	    android:ems="6"
	    android:scrollHorizontally="true"
	    android:hint="A" />
	
	<EditText
	    android:id="@+id/lyric13"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentRight="true"
	    android:layout_below="@+id/lyric12"
	    android:layout_toRightOf="@id/line13"
	    android:layout_alignBottom="@id/line13"
	    android:ems="6"
	    android:scrollHorizontally="true"
	    android:hint="A" />
	
	<EditText
	    android:id="@+id/lyric14"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentRight="true"
	    android:layout_below="@id/lyric13"
	    android:layout_toRightOf="@id/line14"
	    android:layout_alignBottom="@id/line14"
	    android:ems="6"
	    android:scrollHorizontally="true"
	    android:hint="A" />
	
	<EditText
	    android:id="@+id/lyric15"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentRight="true"
	    android:layout_below="@id/lyric14"
	    android:layout_toRightOf="@id/line15"
	    android:layout_alignBottom="@id/line15"
	    android:ems="6"
	    android:scrollHorizontally="true"
	    android:hint="A" />
	
	<EditText
	    android:id="@+id/lyric16"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentRight="true"
	    android:layout_below="@id/lyric15"
	    android:layout_toRightOf="@id/line16"
	    android:layout_alignBottom="@id/line16"
	    android:ems="6"
	    android:scrollHorizontally="true"
	    android:hint="A" />
	
	<EditText
	    android:id="@+id/lyric17"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentRight="true"
	    android:layout_below="@id/lyric16"
	    android:layout_toRightOf="@id/line17"
	    android:layout_alignBottom="@id/line17"
	    android:ems="6"
	    android:scrollHorizontally="true"
	    android:hint="A" />
	
	<EditText
	    android:id="@+id/lyric18"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentRight="true"
	    android:layout_below="@id/lyric17"
	    android:layout_toRightOf="@id/line18"
	    android:layout_alignBottom="@id/line18"
	    android:ems="6"
	    android:scrollHorizontally="true"
	    android:hint="A" />
	
	<EditText
	    android:id="@+id/lyric19"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentRight="true"
	    android:layout_below="@+id/lyric18"
	    android:layout_toRightOf="@id/line19"
	    android:layout_alignBottom="@id/line19"
	    android:ems="6"
	    android:scrollHorizontally="true"
	    android:hint="A" />
	
	<EditText
	    android:id="@+id/lyric20"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentRight="true"
	    android:layout_below="@id/lyric19"
	    android:layout_toRightOf="@id/line20"
	    android:layout_alignBottom="@id/line20"
	    android:ems="6"
	    android:scrollHorizontally="true"
	    android:hint="A" />
	
	<EditText
	    android:id="@+id/lyric21"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentRight="true"
	    android:layout_below="@id/lyric20"
	    android:layout_toRightOf="@id/line21"
	    android:layout_alignBottom="@id/line21"
	    android:ems="6"
	    android:scrollHorizontally="true"
	    android:hint="A" />
	
	<Button
	    android:id="@+id/checkToastLyrics"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/lyric21"
	    android:text="Check Answers"
	    android:onClick="checkAnswers" />

	<Button
	    android:id="@+id/resultsButton"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignBaseline="@+id/checkToastLyrics"
	    android:layout_alignBottom="@+id/checkToastLyrics"
	    android:layout_alignParentRight="true"
	    android:text="Results"
	    android:enabled="false"
	    android:onClick="goToResults" />



</RelativeLayout>
</ScrollView>